Switch to Java 21 (LTS) and update to parent and medialib versions #141